# admx

./: README.md
cpp/acl_sync/: .gitignore  CMakeLists.txt  README.md
cpp/acl_sync/src/: acl_sync.cpp  acl_sync.hpp  main.cpp
cpp/acl_sync/tests/symbolic/: klee_harness.cpp  run_klee.sh
cpp/acl_sync/tests/unit/: test_acl_sync.cpp
usr/local/sbin/: check-system-fast.sh  dnf-remote-bulk.sh  dnf-remote.sh  dnf-repoquery-format.sh  dnf-repoquery-name-repo.sh  dnf-repoquery-name-version.sh  dnf-repoquery-name.sh  dnf-repository-packages.sh  fedora-remove-old-kernels.sh  find-dirs-write-others.sh  find-files-write-others.sh  find-unsecure-others.sh  firewall-accept-port-with-source.sh  firewall-add-sources.sh  firewall-rm-sources.sh  ipa-add-sudo-rule-all.sh  ipa-add-user-sudo-rule.sh  ipa-ca-cert-update-system-wide.sh  ipa-dns-add-a-with-rev.sh  ipa-dns-add-a.sh  ipa-dns-add-aaaa-with-rev.sh  ipa-dns-add-aaaa.sh  ipa-dns-add-cname.sh  ipa-dns-add-ptr.sh  ipa-dns-del-rec.sh  ipa-dns-mod-a.sh  ipa-host-cert-request.sh  ipa-http-service-add-host.sh  ipa-http-service-cert-request.sh  ipa-http-vh-cert-request.sh  ipa-user-add.sh  ipa-user-password.sh  ipa-user-status.sh  ipa-user-unlock.sh  iscsi-login.sh  loginctl-bulk.sh  loginctl-show-session.sh  lsblk-view-basic.sh  lsblk-view.sh  nmap-net-a.sh  (+26 more)
